--- a/monishan portfolio.html
+++ b/monishan portfolio.html
@@ -1122,7 +1122,7 @@
                             <span class="tech-tag">JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/Monishan2003/Web-design-project1" class="project-link" target="_blank">
+                            <a href="https://github.com/Monishan2003/My-Portfolio-website-.git" class="project-link" target="_blank">
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                             <a href="#" class="project-link outline">
